@@ -62,7 +62,12 @@ form.classic {
             font-family: #fonts[system]; font-size: 0.8rem; font-weight: normal;
         }
         tr {
-            vertical-align: top;
+            vertical-align: middle;
+        }
+        tr.separate {
+            .ds-field, .ds-remove {
+                border-bottom: 1px solid #colours[line];
+            }
         }
         .ds-field {
             display: flex; flex-direction: column;
@@ -78,12 +83,6 @@ form.classic {
         }
         .ds-reorderable .knob {
             display: block; height: 20px; width: 20px;
-        }
-        .ds-tag {
-            border-bottom: 1px solid #colours[line];
-        }
-        tr:last-child .ds-tag {
-            border-bottom: none;
         }
     }
     .form-wrapper {
@@ -364,6 +363,23 @@ form.classic {
         label {
             padding: 0.5rem 0 0.5rem 0.5rem; text-align: left;
         }
+    }
+    .page-list {
+        list-style-type: none; margin: 0; padding: 0;
+        li {
+            border-bottom: 1px solid #colours[line];
+            border-top-left-radius: 5px; border-top-right-radius: 5px;
+            cursor: pointer; display: inline;
+            font-family: #fonts[system]; font-size: 0.8rem; padding: 0 0.5rem;
+        }
+        li.selected {
+            border: 1px solid #colours[line];
+            border-bottom: 1px solid transparent;
+            color: #colours[text];
+        }
+    }
+    .form-page.hide {
+        display: none;
     }
 }
 .form-error {
